<resources>
    <string name="app_name">KKK</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="money_sing">￥</string>
    <string name="start_text">全球首家PUSH交易所</string>
    <string name="deal">交易</string>
    <string name="price">价格</string>
    <string name="amount">金额</string>
    <string name="quantity">数量</string>
    <string name="confirm">确认</string>
    <string name="cancel">放弃</string>
    <string name="good">好评</string>
    <string name="trust">信任</string>
    <string name="limit">限额: </string>
    <string name="quoted">报价: </string>
    <string name="out">下架</string>
    <string name="you_want">您想</string>
    <string name="how_many">多少?</string>
    <string name="buy">购买</string>
    <string name="sale">出售</string>
    <string name="trade_amount">交易金额:</string>
    <string name="trade_limit">交易限额:</string>
    <string name="order_code">编号:</string>
    <string name="get_trust">+信任</string>
    <string name="lost_trust">已信任</string>
    <string name="add_black_list">+黑名单</string>
    <string name="remove_black_list">已拉黑</string>
    <string name="left_count">广告剩余可交易量:</string>
    <string name="deal_buy_cny_hint">请输入数字</string>
    <string name="deal_buy_coin_hint">请输入数值</string>
    <string name="deal_account_balance">账户可用余额: </string>
    <string name="buy_success">下单成功</string>
    <string name="sale_success">下单成功</string>
    <string name="attention">注意</string>
    <string name="tip">提示</string>
    <string name="out_confirm">您确定要下架此广告吗?</string>
    <string name="outed">广告已下架</string>
    <string name="buy_order">购买订单</string>
    <string name="sale_order">购买订单</string>
    <string name="deal_buy">买币</string>
    <string name="deal_sale">卖币</string>
    <string name="deal_none">暂无交易</string>
    <string name="deal_publish_coin">选择币种</string>
    <string name="deal_publish_coin_hint">请选择币种</string>
    <string name="deal_market_price">行情价格:</string>
    <string name="deal_publish_price">价\u3000\u3000格</string>
    <string name="deal_publish_price_hint">请输入价格</string>
    <string name="deal_publish_premium">溢\u3000\u3000价</string>
    <string name="deal_publish_premium_hint">根据市场的溢价比例</string>
    <string name="deal_publish_pt_price_high">最高价格</string>
    <string name="deal_publish_pt_price_high_hint">广告最高可成交的价格</string>
    <string name="deal_publish_min">最小限额</string>
    <string name="deal_publish_min_hint">每笔交易的最小限额</string>
    <string name="deal_publish_max">最大限额</string>
    <string name="deal_publish_max_hint">每笔交易的最大限额</string>
    <string name="deal_publish_amount_buy">购买总量</string>
    <string name="deal_publish_amount_buy_hint">请输入购买币总量</string>
    <string name="deal_publish_amount_sale">出售总量</string>
    <string name="deal_publish_amount_sale_hint">请输入出售币总量</string>
    <string name="deal_publish_pay_type">付款方式</string>
    <string name="deal_publish_pay_type_hint">请选择付款方式</string>
    <string name="deal_publish_limit">付款期限</string>
    <string name="deal_publish_limit_hint">请选择付款期限</string>
    <string name="deal_publish_limit_minutes">分钟</string>
    <string name="deal_publish_remark_hint">请写下您的广告留言吧</string>
    <string name="deal_publish_setting">高级设置</string>
    <string name="deal_publish_open_time">开放时间</string>
    <string name="deal_publish_anytime">任何时候</string>
    <string name="deal_publish_custom">自定义</string>
    <string name="deal_publish_only_fans">仅粉丝</string>
    <string name="deal_publish_confirm">直接发布</string>
    <string name="deal_publish_pt_price_min">最低价格</string>
    <string name="deal_publish_pt_price_min_hint">广告最低可成交的价格</string>
    <string name="deal_search">搜索</string>
    <string name="deal_search_adv">搜广告</string>
    <string name="deal_search_user">搜用户</string>
    <string name="zhifubao">支付宝</string>
    <string name="weixin">微信</string>
    <string name="card">银行卡转账</string>
    <string name="deal_search_hint_type">请选择广告类型</string>
    <string name="deal_search_hint_min">请填写最低价</string>
    <string name="deal_search_hint_max">请填写最高价</string>
    <string name="deal_search_hint_pay">请选择支付方式</string>
    <string name="deal_search_hint_user">请填写用户昵称</string>
    <string name="deal_publish_hint_end">请将结束时间设置为关闭</string>
    <string name="deal_publish_hint_start">请将开始时间设置为关闭</string>
    <string name="deal_publish_buy">发布购买</string>
    <string name="deal_publish_sale">发布卖出</string>
    <string name="deal_publish_save">保存草稿</string>
    <string name="deal_publish_edit">编辑</string>
    <string name="deal_publish_hint_price">请重新获取价格</string>
    <string name="deal_publish_hint_premium">请输入溢价</string>
    <string name="deal_publish_hint_premium_scope_start">溢价应在</string>
    <string name="deal_publish_hint_premium_scope_end">之间</string>
    <string name="deal_publish_hint_protect_buy">请输入最高价格</string>
    <string name="deal_publish_hint_protect_sale">请输入最低价格</string>
    <string name="deal_publish_hint_min">请输入交易最小额度</string>
    <string name="deal_publish_hint_max">请输入交易最大额度</string>
    <string name="deal_publish_hint_way">请选择付款方式</string>
    <string name="deal_publish_hint_limit">请选择付款时限</string>
    <string name="deal_publish_hint_remark">请填写广告留言</string>
    <string name="deal_publish_success">发布成功</string>
    <string name="deal_publish_save_success">草稿保存成功</string>
    <string name="deal_open_time_close">关闭</string>
    <string name="deal_search_adv_type">广告类型</string>
    <string name="deal_search_adv_type_hint">请选择广告类型</string>
    <string name="deal_search_limit">价格区间</string>
    <string name="deal_search_limit_min">最低价</string>
    <string name="deal_search_limit_max">最高价</string>
    <string name="deal_search_user_nick">用户昵称</string>
    <string name="deal_search_user_nick_hint">请输入用户昵称</string>
    <string name="deal_sunday">每周日</string>
    <string name="deal_monday">每周一</string>
    <string name="deal_tuesday">每周二</string>
    <string name="deal_wednesday">每周三</string>
    <string name="deal_thursday">每周四</string>
    <string name="deal_friday">每周五</string>
    <string name="deal_saturday">每周六</string>
    <string name="deal_title_search_deal">搜索结果</string>
    <string name="deal_times">交易次数</string>
    <string name="trust_times">信任次数</string>
    <string name="good_rate">好评率</string>
    <string name="deal_history">历史交易</string>
    <string name="deal_tip">交易提醒</string>
    <string name="deal_chat">联系对方</string>
    <string name="deal_type_select_tip">请选择交易类型</string>
    <string name="dialog_deal_confirm_title">下单确定</string>
    <string name="dialog_deal_price">出售价格</string>
    <string name="dialog_deal_amount">出售金额</string>
    <string name="dialog_deal_quantity">出售数量</string>
    <string name="dialog_deal_tip1">提醒:请确认价格再下单，下单后此交易的</string>
    <string name="dialog_deal_tip2">将托管锁定,请放心下单</string>
    <string name="dialog_deal_cancel">放弃出售</string>
    <string name="dialog_deal_confirm">确认出售</string>
    <string name="dialog_deal_custom">自定义</string>
    <string name="order_title">订单详情</string>
    <string name="order_none">暂无订单</string>
    <string name="order_copy_id">订单编号已复制</string>
    <string name="order_copy_amount">交易金额已复制</string>
    <string name="order_tag">标记已打款</string>
    <string name="order_cancel">取消订单</string>
    <string name="order_cancel_confirm">您确定要取消订单吗?如果您已付款请不要取消订单!</string>
    <string name="order_cancel_success">取消成功</string>
    <string name="order_tag_wait">等待标记打款</string>
    <string name="order_tag_success">标记成功</string>
    <string name="order_tag_confirm">您确定要标记已打款吗？</string>
    <string name="order_release">释放货币</string>
    <string name="order_release_wait">等待释放货币</string>
    <string name="order_release_success">货币已释放</string>
    <string name="order_release_confirm">您确定要释放货币吗？</string>
    <string name="order_evaluation">交易评价</string>
    <string name="order_evaluation_by_b">买家已评价</string>
    <string name="order_evaluation_by_s">卖家已评价</string>
    <string name="order_evaluation_success">交易评价成功</string>
    <string name="order_evaluation_tip">已释放货币，请对交易做出评价</string>
    <string name="order_evaluation_tip_by_b">买家已评价，等待卖家评价</string>
    <string name="order_evaluation_tip_by_s">卖家已评价，等待买家评价</string>
    <string name="order_done">交易已完成，已评价交易</string>
    <string name="order_wallet">查看钱包</string>
    <string name="order_arbitrate">申请仲裁</string>
    <string name="order_arbitrate_success">申请仲裁</string>
    <string name="order_leave_message">广告留言:</string>
    <string name="order_save_limit_start">货币将在托管中保持至</string>
    <string name="order_save_limit_end">,逾期未支付交易将自动取消</string>
    <string name="order_delete_confirm">您确定要删除这条订单吗？</string>
    <string name="order_delete_success">删除成功</string>
    <string name="order_detail_id">订单编号:</string>
    <string name="order_detail_amount">交易金额</string>
    <string name="order_detail_price">交易价格</string>
    <string name="order_detail_quantity">交易数量</string>
    <string name="order_detail_buyer">买家:</string>
    <string name="order_detail_seller">卖家:</string>
    <string name="order_detail_remark">广告留言:</string>
    <string name="order_arbitrate_title">申请仲裁</string>
    <string name="order_arbitrate_reason_hint">请填写您申请仲裁的理由</string>
    <string name="order_arbitrate_cancel">放弃申请</string>
    <string name="order_arbitrate_confirm">确认申请</string>
    <string name="order_evaluate_title">交易评价</string>
    <string name="order_evaluate_tip">交易有何印象？快来评价吧</string>
    <string name="order_evaluate_good">好评</string>
    <string name="order_evaluate_bad">差评</string>
    <string name="order_evaluate_medium">中评</string>
    <string name="order_evaluate_hint">请用文字简单评价一下</string>
    <string name="order_evaluate_confirm">提交</string>
    <string name="order_jingxingzhong">进行中</string>
    <string name="order_yijieshu">已结束</string>
    <string name="market_title">行情</string>
    <string name="market_none">暂无行情</string>
    <string name="market_wan">万</string>
    <string name="market_title_message">系统消息</string>
    <string name="market_message_none">暂无系统消息</string>
    <string name="property_eth">以太币资产(ETH)</string>
    <string name="property_btc">比特币资产(BTC)</string>
    <string name="property_sc">云储币资产(SC)</string>
    <string name="freeze">冻结</string>
    <string name="wallet_exchange_explain">计算规则:采用银行柜台汇率过去14天的平均值作为汇率参考值,在每一个交割结算日,若该平均值与系统当前汇率偏差超过0.2,则会采用新的14天平均是做为系统汇率。</string>
    <string name="wallet_exchange_past_time">时间</string>
    <string name="wallet_exchange_past_rate">当日汇率</string>
    <string name="wallet_exchange_past_rate_week">两周平均汇率</string>
    <string name="wallet_charge_my_address">我的比特币收款地址</string>
    <string name="user_google_btn_open">开启谷歌验证</string>
    <string name="user_google_btn_close">关闭谷歌验证</string>
    <string name="user_google_btn_modify">修改谷歌验证</string>
    <string name="user_sign_up_nick">昵称</string>
    <string name="user_sign_up_nick_hint">请设置您的昵称</string>
    <string name="user_sign_up_mobile">手机号</string>
    <string name="user_sign_up_mobile_hint">请输入手机号码</string>
    <string name="user_sign_up_code">手机验证码</string>
    <string name="user_sign_up_code_hint">请输入验证码</string>
    <string name="user_sign_up_send">获取验证码</string>
    <string name="user_sign_up_pwd">新密码</string>
    <string name="user_sign_up_pwd_hint">不少于6位</string>
    <string name="user_sign_up_repwd">确认密码</string>
    <string name="user_sign_up_repwd_hint">不少于6位</string>
    <string name="user_sign_up_agree">我已阅读并同意</string>
    <string name="user_sign_up_profile">《注册协议》</string>
    <string name="user_sign_up_confirm">确认注册</string>
    <string name="user_google_key">密钥</string>
    <string name="user_google_copy">复制</string>
    <string name="user_google_paste">粘贴</string>
    <string name="sms_code_title">验证码</string>
    <string name="sms_code_send">获取验证码</string>
    <string name="sms_code_hint">请输入验证码</string>
    <string name="google_code_title">谷歌验证码</string>
    <string name="google_code_hint">请输入谷歌验证码</string>
    <string name="user_sign_up_referee">推荐人手机</string>
    <string name="user_sign_up_referee_hint">推荐人手机号(选填)</string>
</resources>