<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:text="@string/wallet_exchange_past_time"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/gray_999999"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/wallet_exchange_past_rate"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/gray_999999"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:visibility="gone"
            android:text="@string/wallet_exchange_past_rate_week"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/gray_999999"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />


    </LinearLayout>
</layout>