<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/gray_f7f7f7"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/user_sign_up_nick"
                    android:textSize="14sp"
                    android:textColor="@color/fontColor_gray"
                    android:layout_width="115dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/edt_nick"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/user_sign_up_nick_hint"
                    android:inputType="text"
                    android:textColor="@color/fontColor_gray"
                    android:textColorHint="@color/fontColor_hint"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:background="#F0F0F0"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/user_sign_up_mobile"
                    android:textSize="14sp"
                    android:textColor="@color/fontColor_gray"
                    android:layout_width="115dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/edt_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/user_sign_up_mobile_hint"
                    android:inputType="number"
                    android:maxLength="11"
                    android:textColor="@color/fontColor_gray"
                    android:textColorHint="@color/fontColor_hint"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:background="#F0F0F0"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/user_sign_up_referee"
                    android:textSize="14sp"
                    android:textColor="@color/fontColor_gray"
                    android:layout_width="115dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/edt_referee"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:maxLength="11"
                    android:background="@null"
                    android:inputType="number"
                    android:textColor="@color/fontColor_gray"
                    android:textColorHint="@color/fontColor_hint"
                    android:hint="@string/user_sign_up_referee_hint"
                    android:layout_height="match_parent" />


            </LinearLayout>

            <View
                android:background="#F0F0F0"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/user_sign_up_code"
                    android:textSize="14sp"
                    android:textColor="@color/fontColor_gray"
                    android:layout_width="115dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/edt_code"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:maxLength="4"
                    android:background="@null"
                    android:inputType="number"
                    android:textColor="@color/fontColor_gray"
                    android:textColorHint="@color/fontColor_hint"
                    android:hint="@string/user_sign_up_code_hint"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/corner_sign_btn"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/user_sign_up_send"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/user_sign_up_pwd"
                    android:textSize="14sp"
                    android:textColor="@color/fontColor_gray"
                    android:layout_width="115dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textSize="14sp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:textColor="@color/fontColor_gray"
                    android:textColorHint="@color/fontColor_hint"
                    android:hint="@string/user_sign_up_pwd_hint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <View
                android:background="#F0F0F0"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/user_sign_up_repwd"
                    android:textSize="14sp"
                    android:textColor="@color/fontColor_gray"
                    android:layout_width="115dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/edt_re_password"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:textColor="@color/fontColor_gray"
                    android:textColorHint="@color/fontColor_hint"
                    android:hint="@string/user_sign_up_repwd_hint"
                    android:layout_height="match_parent" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_agree"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_agree"
                    android:background="@mipmap/user_sign_agree"
                    android:layout_margin="5dp"
                    android:layout_width="13dp"
                    android:layout_height="13dp" />

            </LinearLayout>

            <TextView
                android:text="@string/user_sign_up_agree"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_clause"
                android:text="@string/user_sign_up_profile"
                android:textSize="13sp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_confirm"
            android:textColor="@color/white"
            android:text="@string/user_sign_up_confirm"
            android:textSize="16sp"
            android:layout_marginTop="42dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/corner_sign_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp" />

    </LinearLayout>
</layout>
