<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:background="@color/gray_f7f7f7"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:background="@color/gray_eeeeee"
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <LinearLayout
            android:id="@+id/ll_key"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/user_google_key"
                android:textSize="14sp"
                android:textColor="@color/fontColor_gray"
                android:layout_width="90dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tv_key"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/fontColor_gray"
                android:textColorHint="@color/fontColor_hint"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btn_copy"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/corner_sign_btn"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/user_google_copy"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:id="@+id/line_key"
            android:background="@color/gray_eeeeee"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/google_code_title"
                android:textSize="14sp"
                android:textColor="@color/fontColor_gray"
                android:layout_width="90dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/edt_google"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="14sp"
                android:maxLength="6"
                android:background="@null"
                android:inputType="number"
                android:textColor="@color/fontColor_gray"
                android:textColorHint="@color/fontColor_hint"
                android:hint="@string/google_code_hint"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btn_paste"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/corner_sign_btn"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/user_google_paste"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:background="@color/gray_eeeeee"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/sms_code_title"
                android:textSize="14sp"
                android:textColor="@color/fontColor_gray"
                android:layout_width="90dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/edt_code"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="14sp"
                android:maxLength="4"
                android:background="@null"
                android:inputType="number"
                android:textColor="@color/fontColor_gray"
                android:textColorHint="@color/fontColor_hint"
                android:hint="@string/sms_code_hint"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/corner_sign_btn"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/sms_code_send"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:background="@color/gray_eeeeee"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <Button
            android:id="@+id/btn_confirm"
            android:background="@drawable/corner_btn"
            android:text="@string/user_google_btn_open"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

    </LinearLayout>
</layout>
