<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:background="@color/popup_bg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <View
            android:id="@+id/empty_view"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/mydialog_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_modify"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/user_google_btn_modify"
                android:textColor="#3DA3FF"
                android:textSize="16sp" />

            <View style="@style/style_split_line" />

            <TextView
                android:id="@+id/tv_close"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/user_google_btn_close"
                android:textColor="#3DA3FF"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/mydialog_bg"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="16sp" />

    </LinearLayout>
</layout>